--- a/consent_onboarding_script.qmd
+++ b/consent_onboarding_script.qmd
@@ -195,7 +195,7 @@ Now I'm going to describe what people are asked to do as participants in our stu
 
 *Again, we will also pay you an additional \$50 a month to help cover the cost of your monthly phone bill.*
 
-*Compensation will be provided via a payment debit card that we will mail to you after successful download of the STAR app. Once compensated for the completion of your initial calls and training, you will receive payment on your designated date once a month.*
+*Compensation will be provided via a payment debit card that we will mail to you after successful download of the STAR app. Once compensated for the completion of your initial calls and training, you will receive payment on your designated date once a month, either on the 15th or the 30th. We will be able to tell you which date you will be paid during the one-week check-in call.*
 
 *All of that said, this study was not designed to make money for the research team or anyone else. If you participate in the study and if the research team develops products from this study, you will not receive any profits. It is also important to let you know that one member of the STAR research team partially owns the company that makes the study app, and as such they may financially benefit from this research study.*
 
