--- a/monthly_update_upload.qmd
+++ b/monthly_update_upload.qmd
@@ -3,7 +3,7 @@
 
 <center>(This SOP has instructions for uploading monthly survey data into R)</center>
 
-#### Instructions
+## Instructions
 
 1.  Go to Slack
 
