--- a/after_check_in_steps.qmd
+++ b/after_check_in_steps.qmd
@@ -3,7 +3,7 @@
 
 <center>(The purpose of this SOP is to outline which steps need to be completed after successful check-in sessions)</center>
 
-#### Instructions
+## Instructions
 
 1.  Submit a Visit Date Log
     -   <https://uwmadison.co1.qualtrics.com/jfe/form/SV_2hPstJohCYbTmKi>\
