--- a/compliance_messages.qmd
+++ b/compliance_messages.qmd
@@ -1,33 +1,58 @@
 # Compliance Messages
 
-<center>(The purpose of this document is to serve as a useful reference for study staff while they remind participants to complete daily and monthly tasks.)</center>
+<center>(This SOP contains warning messages to send when conducting compliance checks.)</center>
 
  
 
-**People who enrolled and did not complete their daily surveys *three days* in a row**
-
-Subject: Missing Daily Updates
-
+**Green Warning (Missed 8 surveys and no data for past 4 days)**
+Subject: Checking in
 Hello,
-
-Our system has notified us that you missed three daily updates since your onboarding session.
-
-As a reminder, participants are expected to complete at least 6 surveys per week, so it's important that you complete these surveys to remain enrolled.
-
-We completely understand that things may arise that prevent you from completing the updates. Please let us know if you are having any issues with the STAR App or completing any tasks and we can work together to solve the problem.
-
-If you are not having trouble, there is no need to reply to this message.
-
-Thank you for your Participation!\
+Our system has notified us that we haven't received any data or updates from you for several days. As a reminder, participants are expected to complete all monthly updates and at least 6 daily updates per week.
+I wanted to check-in and see if everything is alright as well as offer some strategies to help remember to complete study tasks. 
+Some strategies we have found that help with completing surveys are:
+Set reminder notifications using the STAR app or your phone
+Complete surveys right when you wake up or before bed to get in the habit of completing them
+Message us if there is a way we can better support you in completing tasks
+If you are experiencing any problems with the app or have any questions, please let us know.
+Thank you so much for your participation!
 STAR Study Team
 
-**People who enrolled and completed their daily surveys *five days* in a row**
-
+**Yellow Warning (Missed >8 daily updates)**
+Subject: Missing daily updates
 Hello,
+Our system has notified us that you have missed X daily updates since the start of your current study month (XX/XX/23).
+As a reminder, participants are expected to complete at least 6 daily updates per week. Missing 10 daily updates per month puts you at risk for being withdrawn from the study, so it is very important that you complete all daily updates before the end of your study month (XX/XX/23).
+I wanted to check-in and see if everything is alright. Are you having any issues with the STAR App or completing any tasks? 
+If you are not having trouble there is no need to reply to this message.
+Thank you for your participation!
+STAR Study Team
 
-You have completed five daily surveys since you onboarded the study last week!
+**Red Warning (Missed >8 daily updates for the second period in a row)**
+Subject:  Missing daily updates
+Hello,
+Our system has notified us that you have missed X daily updates since the start of your current study month (XX/XX/23).
+As a reminder, participants are required to complete 6 daily updates per week. You MUST not miss more than 10 daily updates before the end of your study month (XX/XX/23) and if you continue to miss more, we may have to discontinue your participation.
+Please let us know if you are having any issues with the STAR App or completing any tasks and we can work together to solve the problem.
+If you are not having trouble there is no need to reply to this message.
+Thank you for your participation!
+STAR Study Team
 
-This has been a huge help to our study. We want to take some time to thank you for your participation. It is the commitment of people like you that make possible what we do and hopefully help others.
+**Monthly, gentle (still able to complete monthly update on time)**
+Subject: Monthly update is ready
+Hello,
+Our system has notified us that you have not yet completed your monthly update. 
+As a reminder, you must complete the monthly update before the end of your study month (XX/XX/23).
+If you are having any issues with the STAR App or completing any tasks please let us know.
+If you are not having trouble, or have completed your monthly update in the last 24 hours, there is no need to reply to this message.
+Thank you for your participation!
+STAR Study Team
 
-Thank you again for your participation!\
+**Monthly, urgent (missed a monthly update)**
+Subject: Missed monthly update
+Hello,
+Our system has notified us that you missed your monthly update. 
+As a reminder, all participants are required to complete every monthly update as part of their participation. If you miss 2 monthly updates in a row, we may have to discontinue your participation. 
+If you are you having any issues with the STAR App or completing any tasks please let us know.
+If you are not having trouble, or have completed your monthly update in the last 24 hours, there is no need to reply to this message.
+Thank you for your participation!
 STAR Study Team
