--- a/ra_tasks.qmd
+++ b/ra_tasks.qmd
@@ -27,8 +27,16 @@ When your assigned tasks are complete, you can help by performing other tasks!
 ## Mail
 
 * Check mailbox on 2nd floor
-* Enter W9s on spreadsheet & file
+
+For returned W9s:
+* Enter W9s on spreadsheet: P:\studydata\risk2\administration\financial\participant_payment_logs\tax_info\w9.xlsx (Password in LastPass)
+* Add "W9 received" on the person's thread
+* Enter the person's name and last 4 social on the spreadsheet listed above
+* File the W9 in the appropriate year folder, alphabetical by last name
+
+For returned participant envelopes: 
 * Note returned envelopes in participant threads, prepare replacement mailings
+
 
 ## Participant communication
 * Look for participant questions that need answering:
